--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,7 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
-					<finalName>users-mysql</finalName>
+					<finalName>mysql</finalName>
 				</configuration>
 			</plugin>
 		</plugins>
