--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.techprimers.jpa</groupId>
-	<artifactId>spring-data-jpa-hibernate-example</artifactId>
+	<artifactId>mysql</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
