--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 # DataSource settings: set here your own configurations for the database
 # connection. In this example we have "netgloo_blog" as database name and
 # "root" as username and password.
-spring.datasource.url = jdbc:mysql://db:3306/test
-spring.datasource.username = root
-spring.datasource.password = root
+spring.datasource.url = jdbc:mysql://sdb:3306/test
+spring.datasource.username = test
+spring.datasource.password = abcd
 
 # Keep the connection alive if idle for a long time (needed in production)
 spring.datasource.testWhileIdle = true
